src/snapshots/pbsql__tests__insert_from_select.snap
---
source: src/lib.rs
expression: report
---
database_names:
  ~/books/matches: main
translated_query:
  Ok:
    - - INSERT INTO
      - "  main.table_contents (\"id\", \"loserId\", \"winnerId\", \"matchDate\")"
      - SELECT
      - "  main.table_contents.id || '2',"
      - "  \"loserId\","
      - "  main.table_contents.winnerId,"
      - "  \"matchDate\""
      - FROM
      - "  main.table_contents"
original_query:
  - "INSERT INTO \"~/books/matches\" (\"id\", \"loserId\", \"winnerId\", \"matchDate\")"
  - "SELECT \"~/books/matches\".\"id\" || '2', \"loserId\", \"~/books/matches\".\"winnerId\", \"matchDate\" FROM \"~/books/matches\""
